--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         
     </div>
-    <div class="flex flex-col justify-between w-full lg:w-1/2 flex items-end lg:space-y-4">
+    <div class="flex flex-col justify-between w-full lg:w-1/2 flex items-end lg:space-y-4 hidden lg:block">
         <img src="images/circle-cropped.png" class="w-1/2 lg:w-full xl:w-3/4 py-4 lg:py-0"/>
     </div>
 </div>
@@ -30,6 +30,9 @@
         <input type="email" placeholder="Email" required="required" class="border-black border-t border-b py-2 lg:w-1/2 px-2 text-lg" style="background-color: #F7FCFF";/><button class="bg-black text-white px-10 py-2 text-lg border border-black">Subscribe</button>
     </div>
     <p class="text-3xl font-bold pl-10" id="demo">DD:HH::MM:SS</p>
+</div>
+<div class="flex justify-center">
+    <img src="images/Circle-Logo-500px.png" class="w-1/2 lg:w-full xl:w-3/4 py-4 lg:py-0 lg:hidden"/>
 </div>
 <script>
     // Set the date we're counting down to
