--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         
     </div>
-    <div class="flex flex-col justify-between w-full lg:w-1/2 flex items-end lg:space-y-4 hidden lg:block">
+    <div class="flex flex-col justify-between w-full lg:w-1/2 flex items-end lg:space-y-4 hidden lg:flex">
         <img src="images/circle-cropped.png" class="w-1/2 lg:w-full xl:w-3/4 py-4 lg:py-0"/>
     </div>
 </div>
